[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/menu/core/form/input/UIMenuBaseSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/ArrowRight.svg" type="Texture" id=2]
[ext_resource path="res://assets/sound/ui/select-previous.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/ui/select-next.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/images/ui/ArrowLeft.svg" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Next:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Previous:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Left/TextureRect:margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right/TextureRect:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Right/TextureRect:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Left/TextureRect:margin_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "left"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Previous:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Left/TextureRect:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Left/TextureRect:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0.0, -10.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "right"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Next:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right/TextureRect:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right/TextureRect:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0 ]
}

[node name="UIMenuBaseSelect" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 32 )
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ToolButton" parent="."]
margin_right = 32.0
margin_bottom = 600.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Left"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="HBoxContainer" parent="."]
margin_left = 36.0
margin_right = 988.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Right" type="ToolButton" parent="."]
margin_left = 992.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Right"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/left = SubResource( 2 )
anims/right = SubResource( 3 )

[node name="Previous" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[node name="Next" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
